--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,348 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+body{
+  background: var(--Background, #2B2B2B);
+}
+nav{
+  background: var(--Background, #2B2B2B);
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+
+}
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+.navbar__list{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.navbar__list li a{
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+.navbar__lsit__btn{
+  background: none;
+  border-radius: 20px;
+  background: var(--Call-to-Action, #A259FF);
+  height: 60px;
+  font-size: 25px;
+  padding: 0px 30px;
+  border: none;
+  gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+  margin-left: 60px;
+}
+.remove__btn{
+  border: none;
+  background: none;
+  font-weight: bolder;
+  font-size: 18px;
+}
+.header__title{
+  color: var(--White, #FFF);
+  font-size: 67px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 73.7px */
+  text-transform: capitalize;
+  max-width: 450px;
+}
+.hero__container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 180px;
+}
+.hero__right{
+  max-width: 450px;
+}
+.hero__text{
+  margin-top: 20px;
+  margin-bottom: 30px;
+  max-width: 450px;
+  color: var(--White, #FFF);
+
+/* Body Text- Work Sans */
+font-family: Work Sans;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%; /* 35.2px */
+text-transform: capitalize;
+max-width: 450px;
+}
+.hero__button{
+  display: flex;
+  height: 60px;
+  padding: 0px 50px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Call-to-Action, #A259FF);
+  border: none;
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+.kg__wraper{
+  display: flex;
+  align-items:center;
+  gap: 10px;
+  margin-top: 30px;
+}
+.kg{
+  color: var(--White, #FFF);
+
+/* H4 - Space Mono */
+font-family: Space Mono;
+font-size: 28px;
+font-style: normal;
+font-weight: 700;
+line-height: 140%; /* 39.2px */
+text-transform: capitalize;
+}
+.total__sale{
+  color: var(--White, #FFF);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.hero__img{
+  width: 510px;
+  border-radius: 15px;
+  background-color: #3B3B3B;
+}
+.anima__img{
+  width: 100%;
+}
+.animakit{
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+  gap: 12px;
+  /* margin-top: 20px; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hero__img_title{
+  color: #FFF;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 30.8px */
+  text-transform: capitalize;
+}
+.animakit__title{
+  color: #FFF;
+
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.animatik__buttom{
+  padding: 20px;
+}
+.burger{
+  display: none;
+  color: #FFF;
+}
+.fa-x{
+  display: none;
+}
+
+@media(max-width:874px){
+    .navbar__list{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFF;
+    position: fixed;
+    right: -10px;
+    top: 0;
+    margin-top: -100px;
+    width: 50%;
+    height: 130vh;
+    z-index: 10;
+    transition: 1000ms;
+
+  }
+  .navbar__lsit__btn{
+    display: none;
+  }
+
+  .is-active{
+    transform: translateX(0);
+  }
+  .navbar__list li a{
+    color: #000;
+   
+  }
+  .burger{
+    display: block;
+  }
+  .fa-x{
+    display: block;
+  }
+  .hero__container{
+    display: flex;
+    align-items: center;
+    margin-top: -80px;
+  }
+  .hero__right{
+    max-width: 380px;
+  }
+  .header__title{
+    font-size:38px;
+    max-width: 330px;
+  }
+  .hero__text{
+    font-size: 16px;
+  }
+  #prime{
+    display: none;
+  }
+  .kg{
+    font-size: 18px !important;
+  }
+  .total__sale{
+    font-size: 16px;
+  }
+}
+@media(max-width:576px){
+   #hero__container{
+    padding: 0 15px;
+    row-gap: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .robot{
+    display: none;
+  }
+  .hero__img{
+    max-width: 350px;
+  }
+    .header__title{
+      font-size: 34px;
+    }
+    .hero__text{
+    font-size: 14px;
+  }
+  .hero__btn{
+    display: flex;
+    height: 40px;
+    padding: 0px 30px;
+    justify-content: center;
+    align-items: center;
+    gap: px;
+    border-radius: 20px;
+    background: var(--Call-to-Action, #A259FF);
+    border: none;
+    color: #FFF;
+    font-size: 8px;
+  }
+  #cards{
+    margin: 0 auto;
+    text-align: center;
+  }
+  .pupy__card__total{
+    margin: 0 auto;
+  }
+}
+/* @media(max-width:460px){
+   .header__title{
+      font-size: 29px;
+    }
+    .hero__text{
+    font-size: 12px;
+  }
+} */
+
+
+.out{
+  display: none;
+}
+
+/*------------------Cards-------------------------------->*/
+.trending{
+  color: var(--White, #FFF);
+
+/* H3 - Work Sans */
+font-family: Work Sans;
+font-size: 38px;
+font-style: normal;
+font-weight: 600;
+line-height: 120%; /* 45.6px */
+text-transform: capitalize;
+}
+#cards{
+  margin-top: 150px;
+}
+.checkout{
+  color: var(--White, #FFF);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+  margin-top: 10px;
+}
+.pupy__card__total{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+.pupy__card{
+  max-width: 330px;
+}
+.pupy__card__under{
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+}
+.pupy__card img{
+  width: 100%;
+}
+.under_1 {
+  max-width: 100px;
+}
+.pupy__card__total{
+  width: 100%;
+  gap: 10px;
+}
+.pupy__card{
+  margin: 0 auto;
 }
