--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   padding: 0 15px;
 }
 body{
-  background: var(--Background, #2B2B2B);
+  /* background: var(--Background, #2B2B2B); */
 }
 nav{
   background: var(--Background, #2B2B2B);
@@ -38,7 +38,7 @@ nav{
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
-  line-height: 140%; /* 22.4px */
+  line-height: 140%; 
 }
 .navbar__lsit__btn{
   background: none;
@@ -66,7 +66,7 @@ nav{
   font-size: 67px;
   font-style: normal;
   font-weight: 600;
-  line-height: 110%; /* 73.7px */
+  line-height: 110%; 
   text-transform: capitalize;
   max-width: 450px;
 }
@@ -86,12 +86,12 @@ nav{
   max-width: 450px;
   color: var(--White, #FFF);
 
-/* Body Text- Work Sans */
+
 font-family: Work Sans;
 font-size: 22px;
 font-style: normal;
 font-weight: 400;
-line-height: 160%; /* 35.2px */
+line-height: 160%; 
 text-transform: capitalize;
 max-width: 450px;
 }
@@ -110,7 +110,7 @@ max-width: 450px;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
-  line-height: 140%; /* 22.4px */
+  line-height: 140%; 
 }
 .kg__wraper{
   display: flex;
@@ -121,12 +121,11 @@ max-width: 450px;
 .kg{
   color: var(--White, #FFF);
 
-/* H4 - Space Mono */
 font-family: Space Mono;
 font-size: 28px;
 font-style: normal;
 font-weight: 700;
-line-height: 140%; /* 39.2px */
+line-height: 140%; 
 text-transform: capitalize;
 }
 .total__sale{
@@ -134,7 +133,7 @@ text-transform: capitalize;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
-  line-height: 160%; /* 35.2px */
+  line-height: 160%; 
   text-transform: capitalize;
 }
 .hero__img{
@@ -150,7 +149,6 @@ text-transform: capitalize;
   align-items: center;
   margin-top: 8px;
   gap: 12px;
-  /* margin-top: 20px; */
 }
 
 .hero__img_title{
@@ -158,18 +156,17 @@ text-transform: capitalize;
   font-size: 22px;
   font-style: normal;
   font-weight: 600;
-  line-height: 140%; /* 30.8px */
+  line-height: 140%; 
   text-transform: capitalize;
 }
 .animakit__title{
   color: #FFF;
 
-  /* Base(Body) - Work Sans */
   font-family: Work Sans;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 140%; /* 22.4px */
+  line-height: 140%; 
 }
 .animatik__buttom{
   padding: 20px;
@@ -281,30 +278,18 @@ text-transform: capitalize;
     margin: 0 auto;
   }
 }
-/* @media(max-width:460px){
-   .header__title{
-      font-size: 29px;
-    }
-    .hero__text{
-    font-size: 12px;
-  }
-} */
-
-
 .out{
   display: none;
 }
 
-/*------------------Cards-------------------------------->*/
 .trending{
   color: var(--White, #FFF);
 
-/* H3 - Work Sans */
 font-family: Work Sans;
 font-size: 38px;
 font-style: normal;
 font-weight: 600;
-line-height: 120%; /* 45.6px */
+line-height: 120%;
 text-transform: capitalize;
 }
 #cards{
@@ -315,7 +300,7 @@ text-transform: capitalize;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
-  line-height: 160%; /* 35.2px */
+  line-height: 160%; 
   text-transform: capitalize;
   margin-top: 10px;
 }
